--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<script src="phaser.min.js"></script>
-     	<script src = "wumpus.js"></script>
+     	<script src = "wumpus2.js"></script>
 	</head>
 	<body>
 	</body>
